# rich-argparse

./: .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  rich_argparse.py  rich_argparse_plus.py
.github/workflows/: nightly-tests.yml  pre-commit.yml  tests.yml
rich_argparse/: __init__.py  __main__.py  _argparse.py  _common.py  _contrib.py  _lazy_rich.py  _optparse.py  _patching.py  _patching.pyi  contrib.py  django.py  optparse.py
rich_argparse_lib/: themes.py
rich_argparse_plus/: __init__.py  example_parser.py  help_renderer.py  rich_help_formatter_plus.py  theme_scripts.py  themes.py
scripts/: generate-preview  release  render_all_themes.sh  run-tests
stubs/rich_argparse-stubs/: __init__.pyi
tests/: conftest.py  helpers.py  requirements.txt  test_argparse.py  test_contrib.py  test_django.py  test_optparse.py  test_poetry_clone.py  test_rich_argparse.py
